--- a/style.css
+++ b/style.css
@@ -118,12 +118,13 @@ section h1{
     position: relative;
     bottom: 30px;
     font-size: 20px;
+    margin-top: 40px;
 }
 .h4Welcome span{
     text-transform: uppercase;
 }
 .welcome p{
-    padding-top: 40px;
+    padding-top: 20px;
     text-align: center;
 
 }
@@ -289,6 +290,8 @@ footer img{
     width: 300px;
     bottom: 9%;
     right: 2%;
+    opacity: 0.4;
+    z-index: 0;
 
 }
 
@@ -353,6 +356,7 @@ footer img{
     }
     .nav-btn{
         font-size: 22px;
+        cursor: pointer;
     }
     header section{
         width: 458px;
@@ -472,40 +476,34 @@ footer img{
     #location h3{
         font-size: 40px;
     }
-#location h5{
-    text-align: center;
-    padding-bottom: 15px;
-    cursor: pointer;
-    text-decoration: underline;
-}
-
     .womanWithBike{
         position: absolute;
         bottom: 0;
         left: 0%;
-        height: 300%;
+        height: 700px;
         z-index: -69;
         opacity: 0.4s;
     }
-.locationInfo{
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    display: none;
-    position: relative;
-    width: 100%;
-    margin: auto;
-}
-#location img{
-    margin: auto;
-    width: 100%;
-}
-.locationInfo1{
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    display: none;
-}
+    .locationInfo{
+        display: flex;
+        flex-direction: row;
+        padding: 20px;
+        display: none;
+        position: relative;
+        width: 85%;
+        margin: auto;
+    }
+    #location img{
+        margin: auto;
+        width:35%;
+        max-height: 454px;
+    }
+    .locationInfo1{
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        display: none;
+    }
 
 .locationInfo2{
     display: flex;
@@ -526,8 +524,9 @@ footer img{
     padding: 20px;
 }
 .googleMaps{
-    width: 95%;
+    width: 65%;
     margin: auto;
+    padding-left: 5%;
 }
     footer{
         display: flex;
