--- a/style.css
+++ b/style.css
@@ -167,6 +167,9 @@ section h1{
     padding: 5px 10px ;
     text-decoration: none;
 }
+.form-btn{
+    width: 100px;
+}
 .middle-btn:hover{
     background-color: #7BA7D2;
     cursor: pointer;
