--- a/style.css
+++ b/style.css
@@ -358,7 +358,55 @@ footer img{
     font-size: 10px;
     text-transform: uppercase;
 }
+#header{
+    width: 100vw;
+    height: 250px;
+    position: relative;
+}
+#nav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6%;
+    z-index: 59;
+}
+#nav img{
+    height: 49px;
+    width: 67px;
+}
+.nav-btn-menu{
+    text-align: center;
+    text-decoration: none;
+    color: #000000;
+    font-size: var(--fontSizeMobNav);
+    font-family: var(--imBue);
+    width: 20%;
+}
 @media screen and (min-width: 600px)  {
+    #header{
+        width: 100%;
+        max-width: fit-content;
+        height: 250px;
+        position: relative;
+        margin: auto;
+    }
+    #nav{
+        width: 100%;
+        gap:1vw;
+        margin:0;
+        padding:0 ;
+    }
+    #nav img{
+        width: 193px;
+        height: 142px;
+    }
+    .nav-btn-menu{
+        font-size: 22px;
+        cursor: pointer;
+    }
+    #section{
+
+    }
     header{
         width: 100vw;
         max-width: fit-content;
