--- a/style.css
+++ b/style.css
@@ -25,8 +25,11 @@ header nav{
     justify-content: center;
     gap: 6%;
     z-index: 69;
+    position: absolute;
+    top: 0px;
+    width: 100%;
 }
-nav img{
+nav a img{
     height: 49px;
     width: 67px;
 }
@@ -287,7 +290,13 @@ footer img{
     z-index: 70;
     font-family: var(--Poppings);
 }
-
+.xMark{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 1%;
+    right: 1%;
+}
 .stroke{
     width: 80%;
     height: 100%;
@@ -362,6 +371,9 @@ footer img{
     width: 100vw;
     height: 250px;
     position: relative;
+    margin-bottom: 30%;
+    margin-top: 1px;
+    margin-bottom: 50%;    
 }
 #nav{
     display: flex;
@@ -370,7 +382,7 @@ footer img{
     gap: 6%;
     z-index: 59;
 }
-#nav img{
+#nav a img{
     height: 49px;
     width: 67px;
 }
@@ -382,6 +394,35 @@ footer img{
     font-family: var(--imBue);
     width: 20%;
 }
+#section{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    gap: 20px;
+    position: relative;
+    padding: 30px 10px;
+    margin: auto;
+    top: 35%;
+}
+#section p{
+    width: 70%;
+    text-align: center;
+    margin: auto;
+    line-height: 1.3;
+    color: #3B3737;
+
+}
+#section div{
+    background-color: #7BA7D2;
+    opacity: 0.2;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0%;
+}
 @media screen and (min-width: 600px)  {
     #header{
         width: 100%;
@@ -389,6 +430,8 @@ footer img{
         height: 250px;
         position: relative;
         margin: auto;
+        margin-bottom: 30%;
+        margin-top: 1px;
     }
     #nav{
         width: 100%;
@@ -396,17 +439,21 @@ footer img{
         margin:0;
         padding:0 ;
     }
-    #nav img{
-        width: 193px;
-        height: 142px;
+    #nav a img{
+        width: 147px;
+        height: 107px;
     }
     .nav-btn-menu{
         font-size: 22px;
         cursor: pointer;
+        font-family: var(--imBue);
     }
     #section{
-
+        width: 30%;
+        padding: 39px;
+        top: 50%;
     }
+    
     header{
         width: 100vw;
         max-width: fit-content;
@@ -418,9 +465,9 @@ footer img{
         margin: 0;
         padding: 0;
     }
-    nav img{
-        width: 193px;
-        height: 142px;
+    nav a img{
+        width: 147px;
+        height: 107px;
     }
     .nav-btn{
         font-size: 22px;
