--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ footer{
 	opacity: 1;
 	width: 5%;
 	height: auto;
-	margin-bottom: 250px;
+	margin-bottom: 220px;
 }
 .copyright{
     position: absolute;
@@ -418,6 +418,7 @@ footer img{
     margin: auto;
     line-height: 1.3;
     color: #3B3737;
+	font-family: var(--Poppings);
 
 }
 #section div{
