--- a/style.css
+++ b/style.css
@@ -423,6 +423,12 @@ footer img{
     top: 0px;
     left: 0%;
 }
+#background{
+    position: absolute;
+    width: 100%;
+    left: 3em;
+    top: 30%;
+}
 @media screen and (min-width: 600px)  {
     #header{
         width: 100%;
