--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ header section{
     height: 160px;
     background-color: var(--nav);
     position: relative;
+    
     top: 1.5rem;
     left: 49%;
     margin-top: -50%;
@@ -434,9 +435,11 @@ footer{
 }
 #background{
     position: absolute;
-    width: 95%;
+    width: 96%;
     left: 3em;
-    top: 30%;
+    top: 1%;
+    opacity: 0.4;
+    z-index: -20;
 }
 @media screen and (min-width: 600px)  {
     #header{
