--- a/style.css
+++ b/style.css
@@ -52,14 +52,11 @@ nav a img{
 header section{
     width: 218px;
     height: 160px;
-    background-color: var(--nav);
     position: relative;
-    
     top: 1.5rem;
     left: 49%;
     margin-top: -50%;
     margin-left: -100px;
-    opacity: 0.6;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -68,17 +65,31 @@ header section{
     font-family: var(--Poppings);
     text-transform: uppercase;
     text-align: center;
+    z-index: 10;
+}
+.opacitys{
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-color: var(--nav);
+    z-index: 5;
+    position: absolute;
+    top: 0%;
+    left: 0%;
 }
 section h1{
     font-family: var(--imBue);
     font-size:22px;
+    z-index: 69;
     
 }
 .littleText{
     font-size: 8px;
+    z-index: 69;
 }
 .orderSpan{
     font-size: 10px;
+    z-index: 69;
     font-weight:600;
 }
 .telNumber{
@@ -89,6 +100,7 @@ section h1{
     position: relative;
     background-color: var(--btn-color);
     color: var(--nav);
+    z-index: 69;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -99,6 +111,7 @@ section h1{
 }
 .telNumber img{
     width: 13px;
+    z-index: 69;
     height: 12px;
    
 }
