--- a/style.css
+++ b/style.css
@@ -206,6 +206,9 @@ section h1{
     height: auto;
     padding: 5px 10px ;
 }
+#location-web{
+    display: none;
+}
 
 #location{
     position: relative;
@@ -216,6 +219,11 @@ section h1{
 }
 .container{
     position: relative;
+}
+#location h5{
+    cursor: pointer;
+    margin: 5px;
+    text-decoration: underline;
 }
 #location div img{
     width: 100%;
@@ -678,98 +686,55 @@ footer{
         padding: 0;
         
     }
-    /*
-    #location h3{
+    #location{
+        display: none;
+    }
+    #location-web{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-top: 100px;
+        gap:4px;
+    }
+    .container{
+        position: relative;
+        width: 45%;
+        margin: auto;
+    }
+    #location-web div img{
+        width: 100%;
+        position: relative;
+    }
+    .h3TagInLocation{
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        color: #fff;
+        z-index: 69;
+        width: fit-content;
+        max-width: fit-content;
+        font-size: 29px;
+        display: inline-block
+    }
+    .h3TagInLocation:hover{
         font-size: 40px;
     }
-    .locationInfo{
-        padding: 20px;
-        width: 85%;
-    }
-    #location h5{
-        text-decoration: none;
-        width: fit-content;
-        margin: auto;
+    .opacity{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        opacity: 0.4;
+        z-index: 20;
+        background-color: #000000;
 
     }
-    #location h5:hover{
-        text-decoration: underline;
+    .opacity:hover{
+        background-color: #7BA7D2;
+        opacity: 0.5;
     }
-    #location img{
-        margin: auto;
-        width:35%;
-        max-height: 454px;
-    }
-    .paragrafForLocation{
-        text-align: center;
-        width: 80%;
-        margin: auto;
-        padding: 20px;
-    }
-    .googleMaps{
-        width: 65%;
-        margin: auto;
-        padding-left: 5%;
-    }
-    */
-    
-#location{
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-top: 100px;
-    gap:4px;
-}
-.container{
-    width: 48%;
-    margin: auto;
-}
-#location div img{
-    width: 100%;
-    position: relative;
-}
-.h3TagInLocation{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    color: #fff;
-    z-index: 69;
-    width: fit-content;
-    max-width: fit-content;
-    font-size: 29px;
-    display: inline-block
-}
-.h3TagInLocation:hover{
-    font-size: 40px;
-}
-.paraForLocation{
-    margin:0 ;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    margin-top: 50px;
-    box-shadow: 2px 2px 8px 3px #3B3737;
-    color: var(--nav);
-    width: 30%;
-    background-color: #7BA7D2;
-    z-index: 69;
-}
-.opacity{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0.4;
-    z-index: 20;
-    background-color: #000000;
-    
-}
-.opacity:hover{
-    background-color: #7BA7D2;
-    opacity: 0.5;
-}
 
     footer{
         display: flex;
