--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ header section{
     text-transform: uppercase;
     text-align: center;
     z-index: 10;
-    cursor:default;
 }
 .opacitys{
     width: 100%;
@@ -124,7 +123,7 @@ section h1{
 }
 .welcome img{
     width: 100%;
-    height: max-content;
+    height: auto;
 }
 .h4Welcome{
     text-align: center;
@@ -206,9 +205,6 @@ section h1{
     height: auto;
     padding: 5px 10px ;
 }
-#location-web{
-    display: none;
-}
 
 #location{
     position: relative;
@@ -220,10 +216,10 @@ section h1{
 .container{
     position: relative;
 }
-#location h5{
-    cursor: pointer;
-    margin: 5px;
-    text-decoration: underline;
+#h4Welcome{
+    font-family: var(--imBue);
+    font-size: 22px;
+    margin: 20px;
 }
 #location div img{
     width: 100%;
@@ -339,7 +335,6 @@ footer{
 .childFooter div{
     display: flex;
     flex-direction: row;
-    gap: 15px;
 }
 .wolt{
     width: 50px;
@@ -351,9 +346,8 @@ footer{
 	text-decoration: none;
 	color: white;
 }
-.childFooter div p:hover{
+.childFooter a:hover{
     color: black;
-    cursor: pointer;
 }
 
 .copyright{
@@ -686,55 +680,100 @@ footer{
         padding: 0;
         
     }
-    #location{
-        display: none;
-    }
-    #location-web{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        width: 100%;
-        margin-top: 100px;
-        gap:4px;
-    }
-    .container{
-        position: relative;
-        width: 45%;
-        margin: auto;
-    }
-    #location-web div img{
-        width: 100%;
-        position: relative;
-    }
-    .h3TagInLocation{
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        color: #fff;
-        z-index: 69;
-        width: fit-content;
-        max-width: fit-content;
-        font-size: 29px;
-        display: inline-block
-    }
-    .h3TagInLocation:hover{
+    /*
+    #location h3{
         font-size: 40px;
     }
-    .opacity{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        opacity: 0.4;
-        z-index: 20;
-        background-color: #000000;
+    .locationInfo{
+        padding: 20px;
+        width: 85%;
+    }
+    #location h5{
+        text-decoration: none;
+        width: fit-content;
+        margin: auto;
 
     }
-    .opacity:hover{
-        background-color: #7BA7D2;
-        opacity: 0.5;
+    #location h5:hover{
+        text-decoration: underline;
     }
+    #location img{
+        margin: auto;
+        width:35%;
+        max-height: 454px;
+    }
+    .paragrafForLocation{
+        text-align: center;
+        width: 80%;
+        margin: auto;
+        padding: 20px;
+    }
+    .googleMaps{
+        width: 65%;
+        margin: auto;
+        padding-left: 5%;
+    }
+    */
+    
+#location{
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 100px;
+    gap:4px;
+}
+#location h1{
+    margin-bottom: 20px;
+}
+.container{
+    width: 48%;
+    margin: auto;
+}
+#location div img{
+    width: 100%;
+    position: relative;
+}
+.h3TagInLocation{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: #fff;
+    width: auto;
+    z-index: 69;
+    font-size: 29px;
+}
+.h3TagInLocation:hover{
+    font-size: 40px;
+}
+.paraForLocation{
+    text-align: center;
+    margin:0 ;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    margin-top: 50px;
+    box-shadow: 2px 2px 8px 3px #3B3737;
+    color: var(--nav);
+    width: 30%;
+    background-color: #7BA7D2;
+    z-index: 69;
+}
+.opacity{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: 20;
+    background-color: #000000;
+    
+}
+.opacity:hover{
+    background-color: #7BA7D2;
+    opacity: 0.5;
+}
 
     footer{
         display: flex;
