--- a/style.css
+++ b/style.css
@@ -117,8 +117,9 @@ section h1{
 }
 
 .welcome{
-    width: 100%;
-    padding: 35px;
+    width: 80%;
+    margin: auto;
+    padding-top: 35px;
     position: relative;
 }
 .welcome img{
@@ -257,57 +258,13 @@ section h1{
     z-index: 20;
     background-color: #000000;
 }
-/*
-#location h5{
-    padding-bottom: 20px;
-    cursor: pointer;
-    font-size: 16px;
-    font-family: var(--Poppings);
-    font-weight: 800;
-    text-decoration: underline;
-}
-#location h3{
-    padding: 20px;
-    font-size: 20px;
-    padding-bottom: 25px;
-    padding-top: 80px ;
-}
-*/
 .womanWithBike{
     position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 500px;
-    z-index: -69;
+    bottom: -11%;
+    right: 0%;
+    width: 25%;
     opacity: 0.4;
 }
-/*
-.locationInfo{
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    display: none;
-    position: relative;
-    width: 100%;
-    margin: auto;
-}
-#location img{
-    margin: auto;
-    width: 100%;
-}
-
-.paragrafForLocation{
-    padding-bottom: 20px;
-    text-align: center;
-    padding: 20px;
-    font-family: var(--Poppings);
-}
-
-.googleMaps{
-    width: 95%;
-    margin: auto;
-}
-*/
 footer{
     margin-top: 100px;
     display: flex;
@@ -680,101 +637,70 @@ footer{
         padding: 0;
         
     }
-    /*
-    #location h3{
+    .womanWithBike{
+        bottom: -15%;
+        z-index: -2;
+    }
+    #location{
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-top: 100px;
+        gap:4px;
+    }
+    #location h1{
+        margin-bottom: 20px;
+    }
+    .container{
+        width: 48%;
+        margin: auto;
+    }
+    #location div img{
+        width: 100%;
+        position: relative;
+    }
+    .h3TagInLocation{
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        color: #fff;
+        width: auto;
+        z-index: 69;
+        font-size: 29px;
+    }
+    .h3TagInLocation:hover{
         font-size: 40px;
     }
-    .locationInfo{
-        padding: 20px;
-        width: 85%;
-    }
-    #location h5{
-        text-decoration: none;
-        width: fit-content;
-        margin: auto;
-
-    }
-    #location h5:hover{
-        text-decoration: underline;
-    }
-    #location img{
-        margin: auto;
-        width:35%;
-        max-height: 454px;
-    }
-    .paragrafForLocation{
+    .paraForLocation{
         text-align: center;
-        width: 80%;
-        margin: auto;
-        padding: 20px;
+        margin:0 ;
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        margin-top: 50px;
+        box-shadow: 2px 2px 8px 3px #3B3737;
+        color: var(--nav);
+        width: 30%;
+        background-color: #7BA7D2;
+        z-index: 69;
     }
-    .googleMaps{
-        width: 65%;
-        margin: auto;
-        padding-left: 5%;
+    .opacity{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        opacity: 0.4;
+        z-index: 20;
+        background-color: #000000;
+        
     }
-    */
+    .opacity:hover{
+        background-color: #7BA7D2;
+        opacity: 0.5;
+    }
     
-#location{
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-top: 100px;
-    gap:4px;
-}
-#location h1{
-    margin-bottom: 20px;
-}
-.container{
-    width: 48%;
-    margin: auto;
-}
-#location div img{
-    width: 100%;
-    position: relative;
-}
-.h3TagInLocation{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    color: #fff;
-    width: auto;
-    z-index: 69;
-    font-size: 29px;
-}
-.h3TagInLocation:hover{
-    font-size: 40px;
-}
-.paraForLocation{
-    text-align: center;
-    margin:0 ;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    margin-top: 50px;
-    box-shadow: 2px 2px 8px 3px #3B3737;
-    color: var(--nav);
-    width: 30%;
-    background-color: #7BA7D2;
-    z-index: 69;
-}
-.opacity{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0.4;
-    z-index: 20;
-    background-color: #000000;
-    
-}
-.opacity:hover{
-    background-color: #7BA7D2;
-    opacity: 0.5;
-}
-
     footer{
         display: flex;
         flex-direction: row;
