--- a/style.css
+++ b/style.css
@@ -472,12 +472,19 @@ footer{
 #background{
     position: absolute;
     width: 96%;
-    left: 3em;
     top: 1%;
     opacity: 0.4;
     z-index: -20;
 }
 @media screen and (min-width: 600px)  {
+    #background{
+        position: absolute;
+        width: 96%;
+        left: 3em;
+        top: 1%;
+        opacity: 0.4;
+        z-index: -20;
+    }
     #header{
         width: 100%;
         max-width: fit-content;
@@ -641,66 +648,66 @@ footer{
         bottom: -15%;
         z-index: -2;
     }
-    #location{
-        flex-direction: row;
-        flex-wrap: wrap;
-        width: 100%;
-        margin-top: 100px;
-        gap:4px;
-    }
-    #location h1{
-        margin-bottom: 20px;
-    }
-    .container{
-        width: 48%;
-        margin: auto;
-    }
-    #location div img{
-        width: 100%;
-        position: relative;
-    }
-    .h3TagInLocation{
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        color: #fff;
-        width: auto;
-        z-index: 69;
-        font-size: 29px;
-    }
-    .h3TagInLocation:hover{
-        font-size: 40px;
-    }
-    .paraForLocation{
-        text-align: center;
-        margin:0 ;
-        position: absolute;
-        top: 60%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        margin-top: 50px;
-        box-shadow: 2px 2px 8px 3px #3B3737;
-        color: var(--nav);
-        width: 30%;
-        background-color: #7BA7D2;
-        z-index: 69;
-    }
-    .opacity{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        opacity: 0.4;
-        z-index: 20;
-        background-color: #000000;
-        
-    }
-    .opacity:hover{
-        background-color: #7BA7D2;
-        opacity: 0.5;
-    }
+#location{
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 100px;
+    gap:4px;
+}
+#location h1{
+    margin-bottom: 20px;
+}
+.container{
+    width: 48%;
+    margin: auto;
+}
+#location div img{
+    width: 100%;
+    position: relative;
+}
+.h3TagInLocation{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: #fff;
+    width: auto;
+    z-index: 69;
+    font-size: 29px;
+}
+.h3TagInLocation:hover{
+    font-size: 40px;
+}
+.paraForLocation{
+    text-align: center;
+    margin:0 ;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    margin-top: 50px;
+    box-shadow: 2px 2px 8px 3px #3B3737;
+    color: var(--nav);
+    width: 30%;
+    background-color: #7BA7D2;
+    z-index: 69;
+}
+.opacity{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: 20;
+    background-color: #000000;
     
+}
+.opacity:hover{
+    background-color: #7BA7D2;
+    opacity: 0.5;
+}
+
     footer{
         display: flex;
         flex-direction: row;
